# BranchPoint

./: .gitignore  README.md  pyproject.toml
branchpoint/: __init__.py  __main__.py  blob_store.py  client.py  context.py  decorators.py  errors.py  event_store.py  graph_builder.py  graph_types.py  ids.py  main.py  recorder.py  schema.py  serialization.py  sqlite_store.py
branchpoint/adapters/: __init__.py  base.py
branchpoint/cli/: __init__.py  main.py
branchpoint/core/: __init__.py  context.py  errors.py  event_store.py  graph_builder.py  graph_types.py  ids.py  provenance.py  proxies.py  recorder.py  refs.py  schema.py  serialization.py  snapshots.py
branchpoint/providers/: __init__.py  base.py
branchpoint/sdk/: __init__.py  client.py  decorators.py  prompt.py
branchpoint/storage/: __init__.py  blob_store.py  sqlite_store.py
examples/dependency_tracking/: 01_auto_decorator_provenance.py  02_depends_on_prompt_string.py  03_prompt_builder.py  04_field_level_proxy.py  05_manual_emit_and_refs.py  06_reserved_kwargs.py  README.md  common.py  run_all.py
examples/refund_agent/: README.md  run_demo.py
tests/: test_adapter_interfaces.py  test_decorator_dependencies.py  test_depends_on_context.py  test_emit_refs.py  test_end_to_end_trace.py  test_golden_traces.py  test_graph_builder.py  test_graph_dependency_edges.py  test_graph_inspection.py  test_payload_safety.py  test_prompt_builder.py  test_provenance_tracker.py  test_proxy_tracking.py  test_recorder.py  test_schema.py  test_snapshots.py  test_sqlite_store.py  test_state_tracking.py  verifier_checklist.md
(+2 files in other folders)
