[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "branchpoint"
version = "0.1.0"
description = "Framework-agnostic trace recording and graph construction for agent workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BranchPoint" }]
dependencies = ["networkx>=3.0"]

[dependency-groups]
dev = ["pytest>=7"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
branchpoint = "branchpoint.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["branchpoint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
